Paintbrush fixes